--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -33,13 +33,13 @@
       "cell_type": "code",
       "source": [
         "#@title ##Installation of libraries\n",
-        "!pip install pytube\n",
         "!pip install pydub\n",
         "!pip install torch\n",
         "!pip install torchaudio\n",
         "!pip install -U demucs\n",
         "!pip install -U stable-ts\n",
         "!pip install geopandas\n",
+        "!pip install yt-dlp\n",
         "!pip install -qq https://github.com/pyannote/pyannote-audio/archive/refs/heads/develop.zip"
       ],
       "metadata": {
@@ -59,12 +59,12 @@
         "import numpy as np\n",
         "import geopandas as gpd\n",
         "from pydub import AudioSegment\n",
-        "from pytube import YouTube\n",
+        "import subprocess\n",
         "from shapely.geometry import LineString\n",
         "from stable_whisper import load_model\n",
         "from pyannote.audio import Pipeline\n",
         "\n",
-        "hugging_face_token=\"\" #@param \n",
+        "hugging_face_token = \"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\" #@param {type:\"string\"}\n",
         "# Load the Stable Whisper model and Pyannote Pipeline\n",
         "model = load_model('large-v2')\n",
         "pipeline = Pipeline.from_pretrained(\"pyannote/speaker-diarization@2.1\",\n",
@@ -79,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "tlFNt4uoB_Mb",
         "cellView": "form"
@@ -93,17 +93,26 @@
         "\n",
         "    Args:\n",
         "    url (str): YouTube video URL\n",
-        "    output_filename (str): Output MP3 file name\n",
+        "    output_filename (str): Output MP3 file name with .mp3 extension\n",
         "    \"\"\"\n",
-        "    yt = YouTube(url)\n",
-        "    audio_stream = yt.streams.filter(only_audio=True).first()\n",
-        "    temp_file = audio_stream.download(filename='temp')\n",
+        "    # Download YouTube video as audio and convert to MP3\n",
+        "    temp_file = \"temp_audio\"\n",
+        "    command = f'yt-dlp -x --audio-format vorbis --output \"{temp_file}.%(ext)s\" {url}'\n",
+        "    subprocess.call(command, shell=True)\n",
         "\n",
-        "    audio = AudioSegment.from_file(temp_file)\n",
+        "    # Find the downloaded file with the correct extension\n",
+        "    for file in os.listdir():\n",
+        "        if file.startswith(temp_file):\n",
+        "            temp_file_with_ext = file\n",
+        "            break\n",
+        "\n",
+        "    # Load the audio file using pydub and convert to mono\n",
+        "    audio = AudioSegment.from_file(temp_file_with_ext)\n",
         "    audio = audio.set_channels(1)  # Set to mono\n",
         "    audio.export(output_filename, format='mp3')\n",
         "\n",
-        "    os.remove(temp_file)\n",
+        "    # Remove temporary file\n",
+        "    os.remove(temp_file_with_ext)\n",
         "    print(f\"Audio downloaded and converted successfully: {output_filename}\")\n",
         "\n",
         "\n",
@@ -182,18 +191,266 @@
     {
       "cell_type": "code",
       "source": [
-        "download_audio('https://www.youtube.com/watch?v=AwJ19fO0Jpk', 'out.mp3')\n",
+        "url_youtube='https://www.youtube.com/watch?v=pj705DvCSxg' #@param {type:\"string\"}\n",
+        "download_audio(url_youtube, 'out.mp3')\n",
         "\n",
         "# Process the audio to obtain transcriptions and speaker diarization\n",
-        "process_audio('out.mp3', 'out.json', 'output.lab')\n",
+        "process_audio('out.mp3', 'out.json', 'output.lab',language=\"en\")\n",
         "results_df, result_simp = analyze_transcriptions_and_diarization('out.json', 'output.lab')\n",
         "result_simp"
       ],
       "metadata": {
-        "id": "tX6ftw-Ks6HD"
+        "id": "tX6ftw-Ks6HD",
+        "outputId": "14de1dfc-294e-4976-d499-b230a6e1609f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 331
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Audio downloaded and converted successfully: out.mp3\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 27.91/27.91 [00:06<00:00,  4.09sec/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saved: /content/out.json\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "    id     speaker                                           sentence  \\\n",
+              "0  0.0  SPEAKER_00   was  a  wintry  walk  to  school  in  Port  V...   \n",
+              "1  1.0  SPEAKER_01   Well,  the  mother  says  we  had  to  go  an...   \n",
+              "2  2.0  SPEAKER_01                                               It's   \n",
+              "3  2.0  SPEAKER_02   It's  cold,  it's  a  cold  journey  to  scho...   \n",
+              "4  3.0  SPEAKER_02   Oh  good,  you  wouldn't  be  long  getting  ...   \n",
+              "5  4.0  SPEAKER_00   It's  nice  to  look  at,  but  tough  to  li...   \n",
+              "6  5.0  SPEAKER_00   Tonight,  weather  warnings  remain  in  plac...   \n",
+              "7  6.0  SPEAKER_00                     Gareth  Wilkinson,  UTV  Live,   \n",
+              "\n",
+              "   start_1  end_1      prob   p_voice  \n",
+              "0     0.48   5.08  0.790458  0.970954  \n",
+              "1     5.94  10.68  0.752543  1.000000  \n",
+              "2    11.10  11.12  0.875745  1.000000  \n",
+              "3    11.10  12.92  0.841942  1.000000  \n",
+              "4    13.00  15.14  0.755839  1.000000  \n",
+              "5    15.84  19.68  0.887305  1.000000  \n",
+              "6    20.36  24.52  0.731222  1.000000  \n",
+              "7    25.18  26.86  0.839735  1.000000  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-b1f351dd-6203-4464-8ea2-c56ec243b834\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>id</th>\n",
+              "      <th>speaker</th>\n",
+              "      <th>sentence</th>\n",
+              "      <th>start_1</th>\n",
+              "      <th>end_1</th>\n",
+              "      <th>prob</th>\n",
+              "      <th>p_voice</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>SPEAKER_00</td>\n",
+              "      <td>was  a  wintry  walk  to  school  in  Port  V...</td>\n",
+              "      <td>0.48</td>\n",
+              "      <td>5.08</td>\n",
+              "      <td>0.790458</td>\n",
+              "      <td>0.970954</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>SPEAKER_01</td>\n",
+              "      <td>Well,  the  mother  says  we  had  to  go  an...</td>\n",
+              "      <td>5.94</td>\n",
+              "      <td>10.68</td>\n",
+              "      <td>0.752543</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2.0</td>\n",
+              "      <td>SPEAKER_01</td>\n",
+              "      <td>It's</td>\n",
+              "      <td>11.10</td>\n",
+              "      <td>11.12</td>\n",
+              "      <td>0.875745</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2.0</td>\n",
+              "      <td>SPEAKER_02</td>\n",
+              "      <td>It's  cold,  it's  a  cold  journey  to  scho...</td>\n",
+              "      <td>11.10</td>\n",
+              "      <td>12.92</td>\n",
+              "      <td>0.841942</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>3.0</td>\n",
+              "      <td>SPEAKER_02</td>\n",
+              "      <td>Oh  good,  you  wouldn't  be  long  getting  ...</td>\n",
+              "      <td>13.00</td>\n",
+              "      <td>15.14</td>\n",
+              "      <td>0.755839</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>4.0</td>\n",
+              "      <td>SPEAKER_00</td>\n",
+              "      <td>It's  nice  to  look  at,  but  tough  to  li...</td>\n",
+              "      <td>15.84</td>\n",
+              "      <td>19.68</td>\n",
+              "      <td>0.887305</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>5.0</td>\n",
+              "      <td>SPEAKER_00</td>\n",
+              "      <td>Tonight,  weather  warnings  remain  in  plac...</td>\n",
+              "      <td>20.36</td>\n",
+              "      <td>24.52</td>\n",
+              "      <td>0.731222</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>6.0</td>\n",
+              "      <td>SPEAKER_00</td>\n",
+              "      <td>Gareth  Wilkinson,  UTV  Live,</td>\n",
+              "      <td>25.18</td>\n",
+              "      <td>26.86</td>\n",
+              "      <td>0.839735</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b1f351dd-6203-4464-8ea2-c56ec243b834')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-b1f351dd-6203-4464-8ea2-c56ec243b834 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-b1f351dd-6203-4464-8ea2-c56ec243b834');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     }
   ]
 }
