--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -64,7 +64,7 @@
         "from stable_whisper import load_model\n",
         "from pyannote.audio import Pipeline\n",
         "\n",
-        "hugging_face_token = \"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\" #@param {type:\"string\"}\n",
+        "hugging_face_token = \"\" #@param {type:\"string\"}\n",
         "# Load the Stable Whisper model and Pyannote Pipeline\n",
         "model = load_model('large-v2')\n",
         "pipeline = Pipeline.from_pretrained(\"pyannote/speaker-diarization@2.1\",\n",
