--- a/notebook_es.ipynb
+++ b/notebook_es.ipynb
@@ -32,17 +32,18 @@
       "cell_type": "code",
       "source": [
         "#@title ##Instalaciones de las Librerias\n",
-        "!pip install pytube\n",
         "!pip install pydub\n",
         "!pip install torch\n",
         "!pip install torchaudio\n",
         "!pip install -U demucs\n",
         "!pip install -U stable-ts\n",
         "!pip install geopandas\n",
+        "!pip install yt-dlp\n",
         "!pip install -qq https://github.com/pyannote/pyannote-audio/archive/refs/heads/develop.zip"
       ],
       "metadata": {
-        "id": "XQQSB90VNgzl"
+        "id": "XQQSB90VNgzl",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -51,19 +52,18 @@
       "cell_type": "code",
       "source": [
         "#@title ##Cargar los modelos\n",
-        "\n",
         "import os\n",
         "import json\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import geopandas as gpd\n",
         "from pydub import AudioSegment\n",
-        "from pytube import YouTube\n",
+        "import subprocess\n",
         "from shapely.geometry import LineString\n",
         "from stable_whisper import load_model\n",
         "from pyannote.audio import Pipeline\n",
         "\n",
-        "hugging_face_token=\"\" #@param \n",
+        "hugging_face_token = \"\" #@param {type:\"string\"}\n",
         "# Load the Stable Whisper model and Pyannote Pipeline\n",
         "model = load_model('large-v2')\n",
         "pipeline = Pipeline.from_pretrained(\"pyannote/speaker-diarization@2.1\",\n",
@@ -92,17 +92,26 @@
         "\n",
         "    Args:\n",
         "    url (str): YouTube video URL\n",
-        "    output_filename (str): Output MP3 file name\n",
+        "    output_filename (str): Output MP3 file name with .mp3 extension\n",
         "    \"\"\"\n",
-        "    yt = YouTube(url)\n",
-        "    audio_stream = yt.streams.filter(only_audio=True).first()\n",
-        "    temp_file = audio_stream.download(filename='temp')\n",
+        "    # Download YouTube video as audio and convert to MP3\n",
+        "    temp_file = \"temp_audio\"\n",
+        "    command = f'yt-dlp -x --audio-format vorbis --output \"{temp_file}.%(ext)s\" {url}'\n",
+        "    subprocess.call(command, shell=True)\n",
         "\n",
-        "    audio = AudioSegment.from_file(temp_file)\n",
+        "    # Find the downloaded file with the correct extension\n",
+        "    for file in os.listdir():\n",
+        "        if file.startswith(temp_file):\n",
+        "            temp_file_with_ext = file\n",
+        "            break\n",
+        "\n",
+        "    # Load the audio file using pydub and convert to mono\n",
+        "    audio = AudioSegment.from_file(temp_file_with_ext)\n",
         "    audio = audio.set_channels(1)  # Set to mono\n",
         "    audio.export(output_filename, format='mp3')\n",
         "\n",
-        "    os.remove(temp_file)\n",
+        "    # Remove temporary file\n",
+        "    os.remove(temp_file_with_ext)\n",
         "    print(f\"Audio downloaded and converted successfully: {output_filename}\")\n",
         "\n",
         "\n",
@@ -181,10 +190,11 @@
     {
       "cell_type": "code",
       "source": [
-        "download_audio('https://www.youtube.com/watch?v=AwJ19fO0Jpk', 'out.mp3')\n",
+        "url_youtube='https://www.youtube.com/watch?v=1hZSzRlAVgs' #@param {type:\"string\"}\n",
+        "download_audio(url_youtube, 'out.mp3')\n",
         "\n",
         "# Process the audio to obtain transcriptions and speaker diarization\n",
-        "process_audio('out.mp3', 'out.json', 'output.lab')\n",
+        "process_audio('out.mp3', 'out.json', 'output.lab',language=\"es\")\n",
         "results_df, result_simp = analyze_transcriptions_and_diarization('out.json', 'output.lab')\n",
         "result_simp\n"
       ],
